[project]
name = "advent-of-code-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data>=2.1.0",
    "graphviz>=0.20.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
